add debug config to python test

--- a/template_content/{% if use_python_pytest %}tests{% endif %}/{% if use_python_pytest %}{{ contract_name }}_test.py{% endif %}.jinja
+++ b/template_content/{% if use_python_pytest %}tests{% endif %}/{% if use_python_pytest %}{{ contract_name }}_test.py{% endif %}.jinja
@@ -1,6 +1,7 @@
 import algokit_utils
 import pytest
 from algokit_utils import get_localnet_default_account
+from algokit_utils.config import config
 from algosdk.v2client.algod import AlgodClient
 from algosdk.v2client.indexer import IndexerClient
 
@@ -11,6 +12,11 @@ from smart_contracts.artifacts.{{ contract_name }}.client import {{ contract_nam
 def {{ contract_name }}_client(
     algod_client: AlgodClient, indexer_client: IndexerClient
 ) -> {{ contract_name.split('_')|map('capitalize')|join }}Client:
+    config.configure(
+        debug=True,
+        # trace_all=True,
+    )
+
     client = {{ contract_name.split('_')|map('capitalize')|join }}Client(
         algod_client,
         creator=get_localnet_default_account(algod_client),
