fix: windows issues

--- a/template_content/smart_contracts/{{ contract_name }}/{% if deployment_language == 'python' %}deploy_config.py{% endif %}.jinja
+++ b/template_content/smart_contracts/{{ contract_name }}/{% if deployment_language == 'python' %}deploy_config.py{% endif %}.jinja
@@ -15,10 +15,10 @@ def deploy(
     deployer: algokit_utils.Account,
 ) -> None:
     from smart_contracts.artifacts.{{ contract_name }}.client import (
-        {{ contract_name.split('_')|map('capitalize')|join }}Client,
+        {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client,
     )
 
-    app_client = {{ contract_name.split('_')|map('capitalize')|join }}Client(
+    app_client = {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client(
         algod_client,
         creator=deployer,
         indexer_client=indexer_client,
