--- a/template_content/smart_contracts/{{ contract_name }}/{% if deployment_language == 'typescript' %}deploy-config.ts{% endif %}.jinja
+++ b/template_content/smart_contracts/{{ contract_name }}/{% if deployment_language == 'typescript' %}deploy-config.ts{% endif %}.jinja
@@ -1,9 +1,9 @@
 import * as algokit from '@algorandfoundation/algokit-utils'
-import { {{ contract_name.split('_')|map('capitalize')|join }}Client } from '../artifacts/{{ contract_name }}/client'
+import { {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client } from '../artifacts/{{ contract_name }}/client'
 
 // Below is a showcase of various deployment options you can use in TypeScript Client
 export async function deploy() {
-  console.log('=== Deploying {{ contract_name.split('_')|map('capitalize')|join }} ===')
+  console.log('=== Deploying {% include pathjoin('includes', 'contract_name_pascal.jinja') %} ===')
 
   const algod = algokit.getAlgoClient()
   const indexer = algokit.getAlgoIndexerClient()
@@ -16,7 +16,7 @@ export async function deploy() {
     },
     algod,
   )
-  const appClient = new {{ contract_name.split('_')|map('capitalize')|join }}Client(
+  const appClient = new {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client(
     {
       resolveBy: 'creatorAndName',
       findExistingUsing: indexer,
