--- a/template_content/{% if ide_vscode %}.tours{% endif %}/getting-started-with-your-algokit-project.tour.jinja
+++ b/template_content/{% if ide_vscode %}.tours{% endif %}/getting-started-with-your-algokit-project.tour.jinja
@@ -23,7 +23,7 @@
       "line": 32
     },
     {
-      "file": "tests/{% if deployment_language == 'typescript' %}{{ contract_name.split('_')|join('-') }}.spec.ts{% else %}{{ contract_name }}_test.py{% endif %}",
+      "file": "tests/{% if deployment_language == 'typescript' %}{% include pathjoin('includes', 'contract_name_kebab.jinja') %}.spec.ts{% else %}{{ contract_name }}_test.py{% endif %}",
       "description": "If you opted to include unit tests, the default tests provided demonstrate an example of mocking, setting up fixtures, and testing smart contract calls on an AlgoKit Typed client.",
       "line": 21
     },
