--- a/template_content/{% if use_python_pytest %}tests{% endif %}/{% if use_python_pytest %}{{ contract_name }}_test.py{% endif %}.jinja
+++ b/template_content/{% if use_python_pytest %}tests{% endif %}/{% if use_python_pytest %}{{ contract_name }}_test.py{% endif %}.jinja
@@ -5,19 +5,19 @@ from algokit_utils.config import config
 from algosdk.v2client.algod import AlgodClient
 from algosdk.v2client.indexer import IndexerClient
 
-from smart_contracts.artifacts.{{ contract_name }}.client import {{ contract_name.split('_')|map('capitalize')|join }}Client
+from smart_contracts.artifacts.{{ contract_name }}.client import {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client
 
 
 @pytest.fixture(scope="session")
 def {{ contract_name }}_client(
     algod_client: AlgodClient, indexer_client: IndexerClient
-) -> {{ contract_name.split('_')|map('capitalize')|join }}Client:
+) -> {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client:
     config.configure(
         debug=True,
         # trace_all=True,
     )
 
-    client = {{ contract_name.split('_')|map('capitalize')|join }}Client(
+    client = {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client(
         algod_client,
         creator=get_localnet_default_account(algod_client),
         indexer_client=indexer_client,
@@ -32,14 +32,14 @@ def {{ contract_name }}_client(
     return client
 
 
-def test_says_hello({{ contract_name }}_client: {{ contract_name.split('_')|map('capitalize')|join }}Client) -> None:
+def test_says_hello({{ contract_name }}_client: {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client) -> None:
     result = {{ contract_name }}_client.hello(name="World")
 
     assert result.return_value == "Hello, World"
 
 
 def test_simulate_says_hello_with_correct_budget_consumed(
-    {{ contract_name }}_client: {{ contract_name.split('_')|map('capitalize')|join }}Client, algod_client: AlgodClient
+    {{ contract_name }}_client: {% include pathjoin('includes', 'contract_name_pascal.jinja') %}Client, algod_client: AlgodClient
 ) -> None:
     result = (
         {{ contract_name }}_client.compose().hello(name="World").hello(name="Jane").simulate()
