feat: tealer integration

--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/checks.yaml.jinja
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/checks.yaml.jinja
@@ -89,6 +89,9 @@ jobs:
         run: npm run test
 {%- endif %}
 
+      - name: Scan TEAL files for issues
+        run: algokit task analyze . # add --diff flag if you want output stability checks instead
+
       - name: Check output stability of the smart contracts
         shell: bash
         run: |
