refactor: addressing pr comments

--- a/template_content/.gitignore.jinja
+++ b/template_content/.gitignore.jinja
@@ -176,3 +176,8 @@ node_modules
 
 # AlgoKit
 debug_traces/
+
+.algokit/*
+!.algokit/sources/
+!.algokit/generators/
+!.algokit/static-analysis/snapshots/
