--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/checks.yaml.jinja
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/checks.yaml.jinja
@@ -90,7 +90,7 @@ jobs:
 {%- endif %}
 
       - name: Scan TEAL files for issues
-        run: algokit task analyze . # add --diff flag if you want output stability checks instead
+        run: algokit task analyze .algokit --recursive --force # add --diff flag if you want output stability checks instead
 
       - name: Check output stability of the smart contracts
         shell: bash
