fix: patching typo in starter preset jest tests

--- a/template_content/{% if use_typescript_jest %}tests{% endif %}/{% if use_typescript_jest %}{% include pathjoin('includes', 'contract_name_kebab.jinja') %}.spec.ts{% endif %}.jinja
+++ b/template_content/{% if use_typescript_jest %}tests{% endif %}/{% if use_typescript_jest %}{% include pathjoin('includes', 'contract_name_kebab.jinja') %}.spec.ts{% endif %}.jinja
@@ -23,12 +23,19 @@ describe('{{ contract_name.split('_')|join(' ') }} contract', () => {
       },
       algod,
     )
+    {%- if preset_name == 'starter' %}
+    await client.deploy({
+      onSchemaBreak: 'append',
+      onUpdate: 'append',
+    })
+    {%- elif preset_name == 'production' %}
     await client.deploy({
       allowDelete: true,
       allowUpdate: true,
       onSchemaBreak: 'replace',
       onUpdate: 'update',
     })
+    {% endif %}
     return { client }
   }
 
