chore: adding custom preset; aligning launch configs

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/launch.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/launch.json.jinja
@@ -12,7 +12,7 @@
       "envFile": "${workspaceFolder}/.env.localnet"
     },
     {
-      "name": "Deploy Built Beaker application",
+      "name": "Deploy Contracts",
       "type": "python",
       "request": "launch",
       "module": "smart_contracts",
@@ -34,7 +34,7 @@
       "envFile": "${workspaceFolder}/.env.localnet"
     },
     {
-      "name": "Deploy Built Beaker application",
+      "name": "Deploy Contracts",
       "type": "node",
       "request": "launch",
       "runtimeExecutable": "npm",
