--- a/template_content/{% if ide_jetbrains %}.idea{% endif %}/runConfigurations/Build_Beaker_application____LocalNet.xml.jinja
+++ b/template_content/{% if ide_jetbrains %}.idea{% endif %}/runConfigurations/Build_Beaker_application____LocalNet.xml.jinja
@@ -1,5 +1,5 @@
 <component name="ProjectRunConfigurationManager">
-  <configuration default="false" name="Build Beaker application (+ LocalNet)" type="PythonConfigurationType" factoryName="Python">
+  <configuration default="false" name="Build contracts (+ LocalNet)" type="PythonConfigurationType" factoryName="Python">
     <module name="{{ project_name }}" />
     <option name="INTERPRETER_OPTIONS" value="" />
     <option name="PARENT_ENVS" value="true" />
