--- a/template_content/{% if ide_jetbrains %}.idea{% endif %}/runConfigurations/{% if deployment_language == 'typescript' %}Build___Deploy_Beaker_application.xml{% endif %}.jinja
+++ b/template_content/{% if ide_jetbrains %}.idea{% endif %}/runConfigurations/{% if deployment_language == 'typescript' %}Build___Deploy_Beaker_application.xml{% endif %}.jinja
@@ -1,5 +1,5 @@
 <component name="ProjectRunConfigurationManager">
-  <configuration default="false" name="Build &amp; Deploy Beaker application" type="ShConfigurationType">
+  <configuration default="false" name="Build &amp; Deploy contracts" type="ShConfigurationType">
     <option name="SCRIPT_TEXT" value="algokit deploy localnet" />
     <option name="INDEPENDENT_SCRIPT_PATH" value="true" />
     <option name="SCRIPT_PATH" value="" />
