chore: refining tests

--- a/template_content/.algokit.toml.jinja
+++ b/template_content/.algokit.toml.jinja
@@ -20,3 +20,7 @@ environment_secrets = []
 [generate.smart_contract]
 description = "Adds new smart contract to existing project"
 path = ".algokit/generators/create_contract"
+
+[project]
+type = 'contract'
+name = '{{ project_name }}'
