--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/{% include pathjoin('includes', 'project_name_kebab.jinja') %}-cd.yaml.jinja
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/{% include pathjoin('includes', 'project_name_kebab.jinja') %}-cd.yaml.jinja
@@ -1,21 +1,24 @@
-name: Continuous Delivery of Smart Contract
+name: Release {{ project_name }}
 
 on:
+  workflow_call:
+
+  {%- if not use_workspace %}
   push:
     branches:
       - main
-
-concurrency: release
+  {%- endif %}
 
 jobs:
-  ci-check:
-    name: Perform Checks
-    uses: ./.github/workflows/checks.yaml
-
+  {%- if not use_workspace %}
+  validate:
+    name: Validate {{ project_name }}
+    uses: ./.github/workflows/{% include pathjoin('includes', 'project_name_kebab.jinja') %}-ci.yaml
+  {%- endif %}
   deploy-testnet:
-    runs-on: 'ubuntu-latest'
-    needs: ci-check
-    environment: Test
+    runs-on: "ubuntu-latest"
+    {% if not use_workspace %}needs: validate{% endif %}
+    environment: contract-testnet
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -26,14 +29,14 @@ jobs:
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
-          cache: 'poetry'
+          python-version: "3.12"
+          cache: "poetry"
 
       - name: Install algokit
-        run: pipx install algokit
+        run: pipx install git+https://github.com/algorandfoundation/algokit-cli@feat/orchestration-linking
 
       - name: Bootstrap dependencies
-        run: algokit bootstrap all
+        run: algokit bootstrap all --project-name '{{ project_name }}'
 
       - name: Configure git
         shell: bash
@@ -42,7 +45,7 @@ jobs:
           git config --global user.email "actions@github.com" && git config --global user.name "github-actions"
 
       - name: Deploy to testnet
-        run: algokit deploy testnet
+        run: algokit deploy testnet --project-name '{{ project_name }}'
         env:
 {%- if use_dispenser %}
           # This is the account that becomes the creator of the contract
