--- a/template_content/smart_contracts/__main__.py.jinja
+++ b/template_content/smart_contracts/__main__.py.jinja
@@ -21,6 +21,7 @@ logging.basicConfig(
 logger = logging.getLogger(__name__)
 logger.info("Loading .env")
 load_dotenv()
+load_dotenv(".env.localnet")
 root_path = Path(__file__).parent
 
 
