chore: addressing pr comments

--- a/template_content/{% if use_github_actions %}.github{% endif %}/workflows/{% include pathjoin('includes', 'project_name_kebab.jinja') %}-ci.yaml.jinja
+++ b/template_content/{% if use_github_actions %}.github{% endif %}/workflows/{% include pathjoin('includes', 'project_name_kebab.jinja') %}-ci.yaml.jinja
@@ -30,7 +30,7 @@ jobs:
         run: algokit localnet start
 
       - name: Bootstrap dependencies
-        run: algokit bootstrap all --project-name '{{ project_name }}'
+        run: algokit project bootstrap all --project-name '{{ project_name }}'
 
       - name: Configure git
         shell: bash
