--- a/template_content/pyproject.toml.jinja
+++ b/template_content/pyproject.toml.jinja
@@ -13,6 +13,9 @@ python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 setuptools = "^69.0.2" # Adding explicitly to work around pyteal https://github.com/algorand/pyteal/issues/712
+{% if deployment_language == 'python' -%}
+algokit-client-generator = "^1.1.3"
+{% endif -%}
 {% if use_python_black -%}
 black = {extras = ["d"], version = "*"}
 {% endif -%}
