--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/launch.json.jinja
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/launch.json.jinja
@@ -9,7 +9,14 @@
       "module": "smart_contracts",
       "cwd": "${workspaceFolder}",
       "preLaunchTask": "Start AlgoKit LocalNet",
-      "envFile": "${workspaceFolder}/.env.localnet"
+      "env": {
+        "ALGOD_TOKEN": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "ALGOD_SERVER": "http://localhost",
+        "ALGOD_PORT": "4001",
+        "INDEXER_TOKEN": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "INDEXER_SERVER": "http://localhost",
+        "INDEXER_PORT": "8980"
+      }
     },
     {
       "name": "Deploy contracts",
@@ -18,7 +25,14 @@
       "module": "smart_contracts",
       "args": ["deploy"],
       "cwd": "${workspaceFolder}",
-      "envFile": "${workspaceFolder}/.env.localnet"
+      "env": {
+        "ALGOD_TOKEN": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "ALGOD_SERVER": "http://localhost",
+        "ALGOD_PORT": "4001",
+        "INDEXER_TOKEN": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "INDEXER_SERVER": "http://localhost",
+        "INDEXER_PORT": "8980"
+      }
     },
     {% elif deployment_language == 'typescript' -%}
     {
@@ -31,7 +45,14 @@
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**", "node_modules/**"],
       "preLaunchTask": "Build contracts (+ LocalNet)",
-      "envFile": "${workspaceFolder}/.env.localnet"
+      "env": {
+        "ALGOD_TOKEN": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "ALGOD_SERVER": "http://localhost",
+        "ALGOD_PORT": "4001",
+        "INDEXER_TOKEN": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "INDEXER_SERVER": "http://localhost",
+        "INDEXER_PORT": "8980"
+      }
     },
     {
       "name": "Deploy contracts",
@@ -42,7 +63,14 @@
       "cwd": "${workspaceFolder}/smart_contracts",
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**", "node_modules/**"],
-      "envFile": "${workspaceFolder}/.env.localnet"
+      "env": {
+        "ALGOD_TOKEN": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "ALGOD_SERVER": "http://localhost",
+        "ALGOD_PORT": "4001",
+        "INDEXER_TOKEN": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "INDEXER_SERVER": "http://localhost",
+        "INDEXER_PORT": "8980"
+      }
     },
     {% endif -%}
     {
